--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,7 +1,7 @@
 doctype
 html
   head
-    base(href="/")
+    base(href='/')
     link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
     link(rel="stylesheet", href="/vendor/bootstrap/dist/css/bootstrap.css" )
     link(rel="stylesheet", href="/vendor/toastr/toastr.css")
